# VsCode_Projects

Projects/AC Controller/: INSTALACAO.md
Projects/Arduino_PSU_PID/: ARCHITECTURE.md  CHECKLIST.txt  HARDWARE_SETUP.md  IMPLEMENTATION_SUMMARY.md  PID_GUIDE.md  README.md  TESTING_GUIDE.md  USAGE_GUIDE.md  psu_control.py
Projects/Attiny_Block/: platformio.ini
Projects/Automatizador_Luzes v1/: main.bkp  ver 2.txt
Projects/Automatizador_Luzes_Automotivo/: QUICKSTART.md  README.md  config.example.json  platformio.ini
Projects/BCM_ESP32/: backup v2.cpp  bkcp v3.cpp  build_output.txt
Projects/ESP32_AUTOMOTIVE_BCM/: README.md  backup.html  build_fs.py  platformio.ini  ui.html
Projects/ESP32_CLP/: platformio.ini
Projects/Esp32_Mcp2515/: main.cpp  pid  platformio.ini
Projects/Esp_GPIIO_Sync/: main.cpp
Projects/Esp_Mesh/: platformio.ini
Projects/Esp_Real_Dash/: README_REALDASH_SIM.md  run_python_sender.bat
Projects/Esp_Real_Dash/qt-realdash-sender/: CMakeLists.txt
Projects/Esp_Real_Dash/qt-realdash-sender/qml/: Main.qml
Projects/Esp_Real_Dash/qt-realdash-sender/src/: main.cpp  telemetrysender.cpp  telemetrysender.h
Projects/Modulo_luzes_Attiny v2/: MELHORIAS.md  platformio.ini
Projects/Modulo_luzes_Attiny v3/: platformio.ini
Projects/OEM_Master/: bkp.txt  mac.txt  main.cpp  platformio.ini
Projects/OEM_Slave/: bkp.txt  mac.txt  main.cpp  platformio.ini
Projects/STM8_AUTO_LIGHTS/: platformio.ini
Projects/WebSocket_Client/: platformio.ini
Projects/WebSocket_Server/: platformio.ini
Projects/Wireless_I2c/: README.md
Projects/stm8_2/: main.txt  (+2 more)
(+105 files in other folders)
